@@ -1,5 +1,12 @@
 2007-02-04  Jens Granseuer  <jensgr@gmx.net>
 
+	* gnome-keybinding-properties.c: (keyentry_sort_func),
+	(clear_old_model), (setup_dialog): clean up sorting to not use an
+	imaginary column; change accel sort order to move disabled actions
+	to the back of the list and also speed up sorting a bit
+
+2007-02-04  Jens Granseuer  <jensgr@gmx.net>
+
 	* eggaccelerators.c: (egg_virtual_accelerator_name),
 	(egg_virtual_accelerator_label):
 	* eggaccelerators.h:
